DELETE & FIX: Delete CI/CD Config files, fix swagger routes
